@@ -1943,7 +1943,7 @@ static const struct menuitem preferences_menu_items[] = {
     NULL
   },
   { 
-    MENU_ITEM,		N_("Q_3 Options..."),		0,	0,
+    MENU_ITEM,		N_("Q_3/RTCW Options..."),		0,	0,
     GTK_SIGNAL_FUNC (start_preferences_dialog),
     (gpointer) (PREF_PAGE_Q3 + UNKNOWN_SERVER * 256),
     NULL
